NDOF not being recorded (auto-keyframe) in timeline #62682

Closed
opened 2019-03-17 16:02:25 +01:00 by Jonathan · 6 comments

System Information
Operating system: Windows 7 - Windows-10-10.0.17763 64 Bits
Graphics card: GeForce GTX 980/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 399.24

Blender Version
Broken: version: 2.79 and following until 2.80 (sub 48), branch: master, commit date: 2019-03-13 12:50, hash: ffa29194bb
Worked: unknown

Short description of error
[NDOF is not being recorded (auto-keyframe) in the timeline.
This error is reproducible in blender 2.79 and blender 2.80, In Windows 7 and Windows 10 - both 64-bit.]

Exact steps for others to reproduce the error

  • Lock the camera to the view.
  • In the timeline press the record button to enable auto-keyframe-recording.
  • Press play and move the 3D mouse (NDOF).
    Result:
    The Camera's movement is not being recorded.
    [Based on the default startup or an attached .blend file (as simple as possible)]
    I used the default scene and added some shapes into it, to make the movement more visible.
    //An additional test:
  • I tried to move the camera in another viewport with my normal standard Mouse. This Action has been recorded instantly - as expected.
  • Then I switched back to the "lock to camera - view" and again tried to move the camera with the 3D mouse.
    Result of this 2nd test:
    Contrary to the first test, the camera couldn't be moved at all, and instead it started twitching relentlessly until I let go of the 3D mouse.
    Also - this movement hasn't been recorded into the timeline as well.
    //
    End of report.
**System Information** Operating system: Windows 7 - Windows-10-10.0.17763 64 Bits Graphics card: GeForce GTX 980/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 399.24 **Blender Version** Broken: version: 2.79 and following until 2.80 (sub 48), branch: master, commit date: 2019-03-13 12:50, hash: `ffa29194bb` Worked: unknown **Short description of error** [NDOF is not being recorded (auto-keyframe) in the timeline. This error is reproducible in blender 2.79 and blender 2.80, In Windows 7 and Windows 10 - both 64-bit.] **Exact steps for others to reproduce the error** - Lock the camera to the view. - In the timeline press the record button to enable auto-keyframe-recording. - Press play and move the 3D mouse (NDOF). **Result:** The Camera's movement is not being recorded. [Based on the default startup or an attached .blend file (as simple as possible)] I used the default scene and added some shapes into it, to make the movement more visible. //**An additional test:** - I tried to move the camera in another viewport with my normal standard Mouse. This Action has been recorded instantly - as expected. - Then I switched back to the "lock to camera - view" and again tried to move the camera with the 3D mouse. **Result of this 2nd test:** Contrary to the first test, the camera couldn't be moved at all, and instead it started twitching relentlessly until I let go of the 3D mouse. Also - this movement hasn't been recorded into the timeline as well. // End of report.
Author

Added subscriber: @J.Manyway

Added subscriber: @J.Manyway
Author

THIS is the following Report to Bugreport #57305, where I found out, that this function should alsready work inside of Blender. It just seams to be defective.

THIS is the following Report to Bugreport #57305, where I found out, that this function should alsready work inside of Blender. It just seams to be defective.

Added subscriber: @oskar

Added subscriber: @oskar

This issue was referenced by 18b98fdd6f

This issue was referenced by 18b98fdd6fb0eef23c2d8e7868f7ca52bf945269

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Thanks big time, Campbell. That was fast.
I can comfirm it as working as expected
on our Win10 system.

Thanks big time, Campbell. That was fast. *I can comfirm it as working as expected* on our Win10 system.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62682
No description provided.