Fix T62682: Inconsistent NDOF camera auto-key

Some view operations auto-keyed when locking the camera to view
but some NDOF operators didn't yet support it.

Auto key during animation playback for recording camera motion.